--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
 /* белый #FFFFFF */
 /* белый вторичный rgba(255, 255, 255, 0.6) */
 
+/* первичный шрифт Roboto 400 500 700 900 */
+/* вторичный шрифт Raleway 700*/
+
+
 :root {
     --primari-text-color: #757575;
     --title-text-color: #212121;
@@ -16,20 +20,58 @@
 body {
     background-color: var(--primary-white-color);
     color: var(--primari-text-color);
+
+    font-family: Roboto, sans-serif;
+    letter-spacing: 0.03em;
 }
 
 .list {
     list-style: none;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+        
+
+
 /* Header */
 /* Nav */
 .logo {
     color: var(--accent-color);
+    font-family: Raleway, sans-serif;
+    
+    font-weight: 700;
+    font-size: 26px;
+    line-height: 1.19;
+    text-decoration: none;
+}
+
+.accent {
+    color: #000000;
+}
+
+.accent.current {
+    color: var(--primary-white-color); 
 }
 
 .site-nav .link {
     color: var(--title-text-color);
+    
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
 }
 
 .site-nav .link:hover, 
@@ -41,56 +83,161 @@ body {
     color: var(--accent-color);
 }
 
-/* Button */
-.button {
-    background-color: var(--accent-color);
+/* Стили для index.html */
+/* Hero */
+
+.hero {
+    background-color: #2F303A;
+}
+
+.hero-title {
     color: var(--primary-white-color);
+   
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
 }
 
 .button.primary {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
+    font-family: inherit;
+    cursor: pointer;
+
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
 }
+
+/* Sections */
+.section-title {
+    color: var(--title-text-color);
+
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+}
+
+/* Features */
+.feature-list .title {
+    color: var(--title-text-color);
+
+    font-weight: 700;
+    font-size: 14px;
+    line-height:1.14;
+    text-transform: uppercase;
+}
+
+.feature-list .text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+}
+
+/* Our team */
+
+.team {
+    background-color: #F5F4FA;
+}
+
+.card {
+    background-color: var(--primary-white-color);
+}
+.team-list .title {
+    color: var(--title-text-color);
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+}
+
+.team-list .text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.19;
+    text-align: center;
+}
+
+/* Стили для portfolio.html */
+/* Our projects */
+
+/* Button projects */
 
 .button.secondary {
     background-color: #F5F4FA;
     color: var(--title-text-color);
+    font-family: inherit;
+    cursor: pointer;
+
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
 }
 
+.button.secondary:hover,
+.button.secondary:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+}
+
+/* Projects */
+
+.project {
+    background-color: #ECECEC;
+}
+
+.project-list .title {
+    color: var(--title-text-color);
+
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 2;
+    letter-spacing: 0.06em;
+}
+
+.project-list .text {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.88;
+
+}
+
+
 /* footer */
+
+.footer {
+    background-color: #2F303A;
+}
+
 .auth-nav .link {
     color: var(--primary-white-color);
+
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    text-decoration: none;
+}
+
+.auth-nav .link:hover,
+.auth-nav .link:focus {
+    color: var(--accent-color);
 }
 
 .auth-nav .link.current {
     color: var(--secondary-white-color);
 }
 
-
-/* Стили для index.html */
-/* Hero */
-.hero-title {
-    color: var(--title-text-color);
+.auth-nav .link.current:hover,
+.auth-nav .link.current:focus {
+    color: var(--accent-color);
 }
-
-/* Sections */
-.section-title {
-    color: var(--title-text-color);
-}
-
-/* Features */
-.feature-list .title {
-    color: var(--title-text-color);
-}
-
-/* Our team */
-.team-list .title {
-    color: var(--title-text-color);
-}
-
-/* Стили для portfolio.html */
-/* Our projects */
-.project-list .title {
-    color: var(--title-text-color);
-}
-
