--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,7 @@ body {
     color: var(--primari-text-color);
 
     font-family: Roboto, sans-serif;
+    font-size: 14px;
     letter-spacing: 0.03em;
 }
 
@@ -64,22 +65,39 @@ body {
     color: var(--primary-white-color); 
 }
 
-.site-nav .link {
+.site.list .nav-link {
     color: var(--title-text-color);
     
     font-weight: 500;
-    font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
     text-decoration: none;
 }
 
-.site-nav .link:hover, 
-.site-nav .link:focus  {
+.site.list .nav-link:hover, 
+.site.list .nav-link:focus  {
     color: var(--accent-color);
 }
 
-.site-nav .link.current {
+.site.list .nav-link.current {
+    color: var(--accent-color);
+}
+
+.site.list .contact-link {
+    color: var(--primari-text-color);
+
+    font-weight: 500;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+    text-decoration: none;
+}
+
+.site.list .contact-link:hover,
+.site.list .contact-link:focus {
+    color: var(--accent-color);
+}
+
+.site.list .contact-link.current {
     color: var(--accent-color);
 }
 
@@ -131,14 +149,12 @@ body {
     color: var(--title-text-color);
 
     font-weight: 700;
-    font-size: 14px;
     line-height:1.14;
     text-transform: uppercase;
 }
 
 .feature-list .text {
     font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
 }
 
@@ -223,7 +239,6 @@ body {
     color: var(--primary-white-color);
 
     font-weight: 400;
-    font-size: 14px;
     line-height: 1.71;
     text-decoration: none;
 }
