--- a/css/styles.css
+++ b/css/styles.css
@@ -136,15 +136,14 @@ body {
 }
 
 /* Features */
-.feature-list .title {
+.feature-title {
     color: var(--title-text-color);
 
-    font-weight: 700;
     line-height:1.14;
     text-transform: uppercase;
 }
 
-.feature-list .text {
+.feature-text {
     font-weight: 400;
     line-height: 1.71;
 }
@@ -158,7 +157,7 @@ body {
 .card {
     background-color: var(--primary-white-color);
 }
-.team-list .title {
+.team-title {
     color: var(--title-text-color);
 
     font-weight: 500;
@@ -167,8 +166,7 @@ body {
     text-align: center;
 }
 
-.team-list .text {
-    font-weight: 400;
+.team-text {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
