--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ body {
     text-transform: uppercase;
 }
 
-.button.primary {
+.hero.button {
     background-color: var(--accent-color);
     color: var(--primary-white-color);
     font-family: inherit;
@@ -166,7 +166,7 @@ body {
     text-align: center;
 }
 
-.team-position {
+.team-description {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -177,12 +177,24 @@ body {
 
 /* Button projects */
 
+.button.primary {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    font-family: inherit;
+    cursor: pointer;
+        
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.62;
+    text-align: center;
+}
+
 .button.secondary {
     background-color: #F5F4FA;
     color: var(--title-text-color);
     font-family: inherit;
     cursor: pointer;
-
+        
     font-weight: 500;
     font-size: 16px;
     line-height: 1.62;
@@ -201,20 +213,17 @@ body {
     background-color: #ECECEC;
 }
 
-.project-list .title {
+.project-name {
     color: var(--title-text-color);
 
-    font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
 }
 
-.project-list .text {
-    font-weight: 400;
+.project-position {
     font-size: 16px;
     line-height: 1.88;
-
 }
 
 
